Dam Phase (à tester)

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -66,15 +66,23 @@
     <Compile Include="Assets\Scripts\Bow\ArrowManager.cs" />
     <Compile Include="Assets\Scripts\GameManager.cs" />
     <Compile Include="Assets\Scripts\PathSphere.cs" />
+    <Compile Include="Assets\Scripts\PhaseManagers\DamManager\Dam.cs" />
+    <Compile Include="Assets\Scripts\PhaseManagers\DamManager\DamPart.cs" />
+    <Compile Include="Assets\Scripts\PhaseManagers\DamManager\DamPhaseManager.cs" />
+    <Compile Include="Assets\Scripts\PhaseManagers\DamManager\PowerMaster.cs" />
+    <Compile Include="Assets\Scripts\PhaseManagers\DamManager\TargetNumber.cs" />
+    <Compile Include="Assets\Scripts\PhaseManagers\PhaseManager.cs" />
+    <Compile Include="Assets\Scripts\PhaseManagers\TestManager\QuestionScreen.cs" />
+    <Compile Include="Assets\Scripts\PhaseManagers\TestManager\RecapScreen.cs" />
+    <Compile Include="Assets\Scripts\PhaseManagers\TestManager\TestPhaseManager.cs" />
+    <Compile Include="Assets\Scripts\PhaseManagers\TestManager\Wave.cs" />
     <Compile Include="Assets\Scripts\Profile.cs" />
-    <Compile Include="Assets\Scripts\Quizz\QuestionScreen.cs" />
+    <Compile Include="Assets\Scripts\Quizz\Multiplication.cs" />
+    <Compile Include="Assets\Scripts\Quizz\MultiplicationTable.cs" />
     <Compile Include="Assets\Scripts\Quizz\Quizz.cs" />
     <Compile Include="Assets\Scripts\Quizz\QuizzContainer.cs" />
     <Compile Include="Assets\Scripts\Quizz\QuizzEditorWrap.cs" />
-    <Compile Include="Assets\Scripts\Quizz\QuizzManager.cs" />
-    <Compile Include="Assets\Scripts\Quizz\RecapScreen.cs" />
     <Compile Include="Assets\Scripts\Quizz\SaveJsonSystem.cs" />
-    <Compile Include="Assets\Scripts\Quizz\Wave.cs" />
     <Compile Include="Assets\Scripts\SceneFader.cs" />
     <Compile Include="Assets\Scripts\SpawnPoint.cs" />
     <Compile Include="Assets\Scripts\Sphere\Sphere.cs" />
